# document-ai-assistant

./: .env.example  .gitignore  docling_dump.md  docling_dump_E6_DV-DP_Lab_SoSe26_en.md  pyproject.toml  test.py  try.py
TestDoc/: retrieval_truth_set.md
alembic/: env.py
alembic/versions/: 4b296c6c1d6a_create_initial_schema.py  4dd4a5547716_add_audit_records.py  a1b2c3d4e5f6_add_source_name_to_documents.py  b2c3d4e5f6a7_add_provenance_to_identifiers.py  d6aa2b014259_add_activity_records.py  f3c55ae893eb_add_event_envelopes.py
config/chunking/: certificate.yaml  default.yaml
config/document_families/: approval_information.yaml  certificate.yaml  sensor_list.yaml
config/markers/: certificate.yaml
data/: maintenance_ai.db
doc/: repo_design.md
outputs/architecture/: current_agent_flow_report.md  hardening_progress_report.md  identifier_architecture_review.md  identifier_pipeline_verification.md  planner_architecture_review.md
outputs/debug_agent_runtime/: accept_with_limitations_final_response_bug.md  demo_agent_react_strategy_audit.md  enterprise_demo_runtime_audit.md  live_react_streaming_audit.md  maintenance_interval_end_to_end_debug_report.md
outputs/debug_guardrails/: enterprise_guardrails_audit.md
outputs/debug_langgraph/: langgraph_v2_audit.md  langgraph_v3_planning_audit.md  langgraph_v4_llm_planning_audit.md  langgraph_v5_agent_eval_audit.md  langgraph_v6_reflection_audit.md  langgraph_v7_retrieval_strategy_audit.md  langgraph_v8_deep_research_audit.md  unsafe_request_blocking_audit.md  v7_strategy_fix_audit.md  v8_deep_research_grounding_failure_audit.md
outputs/debug_parsing/: 10 OS-BS 2020 Interprocess communication E_parsing_report.md  13759_3540_01.00_REV.05 Arrangement Navigation Lights and Signals_AS-BUILT_parsing_report.md  19P006-31-FWC12-5-1-0_Manual_parsing_report.md  E6_DV-DP_Lab_SoSe26_en_parsing_report.md  HAW_Lab_Digital_Communication_Introduction_parsing_report.md  Oscilloscope Fundamentals Keysight_parsing_report.md  doc_62e957e411344f1ab2979bccaf16a451_chunk_report.json  doc_62e957e411344f1ab2979bccaf16a451_parse_report.json  doc_62e957e411344f1ab2979bccaf16a451_quality_report.json
outputs/evaluation/agent/: agent_eval_report.json  agent_eval_report.md
outputs/evaluation/retrieval/: benchmark_corpus_manifest.json  retrieval_benchmark_identifier_report.json  retrieval_benchmark_identifier_report.md  retrieval_benchmark_report.json  retrieval_benchmark_report.md  retrieval_benchmark_report_resolution_warning.json  retrieval_benchmark_report_resolution_warning.md
qdrant_data/: meta.json
qdrant_data/collection/document_chunks/: storage.sqlite
scripts/: agent_cli.py  ask_document.py  debug_parse_document.py  demo_agent_cli.py  list_documents.py  profile_graph_build.py  run_agent_eval.py  run_retrieval_benchmark.py  run_retrieval_quality_gate.py  seed_retrieval_benchmark_corpus.py
src/application/agent_runtime/: __init__.py  demo_agent.py  demo_agent_runtime.py
src/application/contracts/: __init__.py  unit_of_work.py
src/application/evaluation/: __init__.py  (+3 more)
src/bootstrap/: __init__.py  startup.py
src/config/: paths.py
tests/: conftest.py
(+1318 files in other folders)
