[project]
name = "document-ai-assistant"
version = "0.1.0"
description = "Local Agentic RAG System for Technical Document Processing"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Ashu & Enes" }
]

dependencies = [
    # Core
    "pydantic>=2.11",
    "pydantic-settings>=2.10",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.16",

    # PDF Processing
    "docling",

    # Vector Database
    "qdrant-client",

    # Embeddings
    "sentence-transformers",

    # LangGraph
    "langgraph",
    "langchain-core",

    # Local LLM
    "ollama",

    # OCR
    "paddleocr",

    # CLI
    "typer",

    # Logging
    "loguru",

    # Utilities
    "python-dotenv",

]

[project.optional-dependencies]
dev = [

    "pytest",
    "pytest-cov",
    "pytest-mock",

    "ruff",
    "black",
    "mypy",

]

[project.scripts]
document-ai = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true