[project]
name = "document-ai-assistant"
version = "0.1.0"
description = "Local Agentic RAG System for Technical Document Processing"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Ashu & Enes" }
]

dependencies = [
    # Core
    "pydantic>=2.11",
    "pydantic-settings>=2.10",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.16",

    # PDF Processing
    "docling",

    # Vector Database
    "qdrant-client",

    # Embeddings
    "sentence-transformers",

    # LangGraph
    "langgraph",
    "langchain-core",

    # Local LLM
    "ollama",

    # OCR
    "paddleocr",

    # CLI
    "typer",

    # Logging
    "loguru",

    # Utilities
    "python-dotenv",
    "pyyaml>=6.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "-ra --cov=src --cov-report=term-missing",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external systems or real infrastructure",
    "e2e: full workflow tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]


[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[project.scripts]
document-ai = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true